--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 * Licenc: GNU GPL
 */
 
+body {
+  text-align: center;
+}
 .container {
   background-color: gold;
   margin: 2%;
@@ -24,6 +27,22 @@ margin-bottom: 4px;
 
 h1 {
 font-family: sans-serif;
+font-size: 20px;
+text-align: center;
 
 }
 
+.keszito {
+  font-size: 17px;
+}
+
+.szamitgomb {
+  background-color: black;
+  color:crimson;
+  padding: 5px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 3px;
+}
